Fix overlapping pictures and add base structure to product and contact pages

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -34,13 +34,14 @@ h1, h2 {
 
 .header-center {
     font-size: 220%;
-    text-align: right;
+    
 }
 
 #logo {
     line-height: 75px;
     float: left;
     text-decoration: none;
+    position: relative;
 }
 
 #logo img {
@@ -89,12 +90,16 @@ h1, h2 {
 }
 
 #hero-image {
-    height: 740px;
-    width: 100%;
-    background: url('../images/grapes-header.png') no-repeat;
-    object-fit: scale-down;
+    height: 520px;
+    width: 100vw;
+    max-width: 100vw;
+    max-height: 100%;
+    background: url('../images/grapes-header.png') no-repeat top center;
+    object-fit: cover;
     padding-bottom: 30px;
     margin-bottom: 60px;
+    position: relative;
+    top: 200px;
 }
 
 #cover-text {
@@ -106,7 +111,7 @@ h1, h2 {
     padding-top: 30px;
     padding-left: 20px;
     float: right;
-    bottom: 50px;
+    bottom: 200px;
     right: 30px;
     background-color: rgba(19, 17, 10, 0.7);
     text-align: left;
@@ -126,6 +131,8 @@ h1, h2 {
     padding: 40px 60px;
     margin: auto;
     border: 1px solid #DBC8BD;
+    position: relative;
+    top: 150px;
 }
 
 .vineyard-pics {
@@ -159,7 +166,8 @@ h1, h2 {
 footer {
     height: 150px;
     width: 100%;
-    position: sticky;
+    position: relative;
+    top: 150px;
 }
 
 .footer-links {    
